# KSesh

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.ja-JP  CMakeLists.txt  Makefile  README.md  fmt  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: push.yml
pkg/windows-store/: Package.StoreAssociation.xml  Package.appxmanifest.in  Package.wapproj.in
public/: index.html  style.css
public/css/: index.css  style.css
res/license/: JUCE Framework.txt  KSesh.txt
res/translation/: README.md  japanese.txt
script/: insertions.hpp.ts  insertions.ts.sh  static-data.sh
src/: app.tsx  bounding-box.ts  content.test.ts  content.ts  edge-inset.ts  export.ts  font-data.ts  harfbuzz.ts  index.tsx  init.ts  line.ts  range.ts  rect.ts  sign-list.test.ts  sign-list.ts  static-data.ts
src/component/: about.tsx  app.tsx  content.tsx
src/desktop/: AboutComponent.hpp  AppSetting.hpp  Application.cpp  Application.mm  BottomToolBar.hpp  Clipboard.cpp  Clipboard.hpp  Clipboard.mm  CommandID.hpp  Content.hpp  ExampleComponent.hpp  Harfbuzz.hpp  HieroglyphComponent.hpp  Insertions.hpp  LookAndFeel.hpp  MainComponent.hpp  MainWindow.hpp  MenuBarModel.hpp  PDFGen.cpp  PDFGen.hpp  PresentationSetting.hpp  Sign.hpp  SignList.cpp  SignList.hpp  SignListButtonContainer.hpp  SignListComponent.hpp  SplitterComponent.hpp  String.hpp  TextEditorComponent.hpp  defer.hpp
src/desktop/otf/: FontFile.hpp  TableDirectory.hpp  TableRecord.hpp  Tag.hpp  Type.hpp
src/desktop/otf/io/: ByteInputStream.hpp  ByteOutputStream.hpp  FileInputStream.hpp  FileOutputStream.hpp  InputStream.hpp  OutputStream.hpp
src/desktop/otf/table/: FontHeaderTable.hpp  MaximumProfileTable.hpp  ReadonlyTable.hpp  Table.hpp
src/front/component/: app.tsx  content.tsx
src/hb/: main.cpp
src/web/: base64.ts  content.test.ts  content.ts  debug.ts  export.ts  hook.ts  insertion.ts  insertions.ts  sign-list.ts
src/web/component/: about.tsx  advertisement.tsx  app.tsx
test/: ContentTests.hpp  main.cpp
